Rewrite pom.xml including project information and make it ready to be builded and tested by command line